<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Network Ping Policy WiFi">

        <ListPreference
            android:key="@string/key_policy_wifi_foreground"
            android:title="App foreground"
            android:dialogTitle="App foreground"
            android:entries="@array/ping_policy_names"
            android:entryValues="@array/ping_policy_values"
            android:defaultValue="10"/>

        <ListPreference
            android:key="@string/key_policy_wifi_background"
            android:title="App background"
            android:dialogTitle="App background"
            android:entries="@array/ping_policy_names"
            android:entryValues="@array/ping_policy_values"
            android:defaultValue="600"/>

        <ListPreference
            android:key="@string/key_policy_wifi_doze"
            android:title="Device doze"
            android:dialogTitle="Device doze"
            android:entries="@array/ping_policy_names"
            android:entryValues="@array/ping_policy_values"
            android:defaultValue="600"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Network Ping Policy Mobile Data">

        <ListPreference
            android:key="@string/key_policy_mobile_data_foreground"
            android:title="App foreground"
            android:dialogTitle="App foreground"
            android:entries="@array/ping_policy_names"
            android:entryValues="@array/ping_policy_values"
            android:defaultValue="10"/>

        <ListPreference
            android:key="@string/key_policy_mobile_data_background"
            android:title="App background"
            android:dialogTitle="App background"
            android:entries="@array/ping_policy_names"
            android:entryValues="@array/ping_policy_values"
            android:defaultValue="600"/>

        <ListPreference
            android:key="@string/key_policy_mobile_data_doze"
            android:title="Device doze"
            android:dialogTitle="Device doze"
            android:entries="@array/ping_policy_names"
            android:entryValues="@array/ping_policy_values"
            android:defaultValue="600"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Logging">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_location_updates"
            android:summary="whether to log location data"
            android:switchTextOff="Start location updates"
            android:switchTextOn="Stop location updates"
            android:title="Location"/>

    </PreferenceCategory>
</PreferenceScreen>
